--- a/Orbs_Website/home.css
+++ b/Orbs_Website/home.css
@@ -1,32 +1,25 @@
 body {
-    font-family: Arial, Arial, Helvetica, sans-serif;
+    font-family: serif, Garamond;
     margin: 0;
-    padding: 20px;
+    background-color: rgba(0, 149, 255, 0.256);
+    background: url(background.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
   
-  h1 {
+  h1.title {
     text-align: center;
-    color: rgb(10, 87, 186);
-  }
-  
-  h2 {
-    margin-top: 30px;
-    color: #666;
-  }
-  
-  ul {
-    list-style-type: none;
-    padding: 0;
-    margin-top: 10px;
-  }
-  
-  li {
-    margin-bottom: 10px;
+    color: rgb(3, 27, 68);
+    padding-bottom: 50px;
+    font-size: 60px;
   }
   
   a {
-    color: #333;
+    color: rgb(3, 130, 147);
     text-decoration: none;
+    white-space: nowrap;
   }
   
   a:hover {
@@ -34,6 +27,44 @@ body {
   }
   
   p {
+    text-align: center;
     color: #777;
     line-height: 1.4;
+    padding-bottom: 80px;
   }
+
+  .main {
+    display: flex;
+    justify-content: center;
+    margin-right: 75px;
+  }
+
+  .clickable-h2 {
+    cursor: pointer;
+    margin: 0 150px;
+  }
+
+  .logo {
+    position: absolute;
+    top: 24px;
+    left: 0;
+    height: 100px;
+  }
+
+  @media (max-width: 600px) {
+    .logo {
+      display: none;
+    }
+    .linkedin {
+      display: none;
+    }
+  }
+
+  .linkedin {
+    position: absolute;
+    top: 54px;
+    right: 30px;
+    height: 40px;
+  }
+
+  
